fixed logos animation in ie (removed backface-visibility hidden)

--- a/src/sass/animations.scss
+++ b/src/sass/animations.scss
@@ -91,6 +91,7 @@
         transform: rotateY(180deg);
     }
     100% {
+        transform: rotateY(0);
     }
 }
 
